--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
   <title>Login Form</title>
 </head>
 <body>
-  <h1>Project starter</h1>
+  <div class="contianer">
+    <div class="sign-up-form">
+      <div class="form-image">
+        <img src="./assets/form-bg.png" alt="" />
+      </div>
+      <form class="form-content">
+        <div class="form-heading">
+          <img src="./assets/logo.png" alt="" />
+          <h1>Create Account</h1>
+          <p>Please fill out all the required fields to create your account!</p>
+        </div>
+        <div class="input-wrap">
+          <div class="input">
+            <input type="text" id="username">
+            <div class="label">
+              <label for="username">Username</label>
+            </div>
+          </div>
+          <div class="input">
+            <input type="email" id="email">
+            <div class="label">
+              <label for="email">Email</label>
+            </div>
+          </div>
+          <div class="input">
+            <input type="password" id="password">
+            <div class="label">
+              <label for="password">Password</label>
+            </div>
+          </div>
+          <div class="input">
+            <input type="password" id="confirmPassword">
+            <div class="label">
+              <label for="confirmPassword">Confirm Password</label>
+            </div>
+          </div>
+          <button type="submit">Create Account</button>
+        </div> 
+      </form>
+    </div>
+  </div>
 </body>
 </html>
